# django-pgcrypto

./: .coveragerc  .gitignore  .hgignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  manage.py  pgcrypto.py  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tests.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  make.bat
pgcrypto/: __init__.py  base.py  fields.py  functions.py
pgcrypto/tests/: run.py
testapp/: models.py  settings.py  tests.py
testapp/fixtures/: employees.json
tests/: Makefile  requirements.txt  settings.py
tests/core/: models.py  tests.py
tests/core/fixtures/: employees.json
