[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pgcrypto"
authors = [
    {name = "Dan Watson", email = "dcwatson@gmail.com"},
]
description = "Python and Django utilities for encrypted fields using pgcrypto."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "cryptography",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/dcwatson/django-pgcrypto"

[tool.setuptools]
packages = ["pgcrypto"]

[tool.setuptools.dynamic]
version = {attr = "pgcrypto.__version__"}
